# CiE

./: .dependencies  .gitignore  .gitmodules  CMakeLists.txt  README.md  matrix.csv
CSG/: CMakeLists.txt
CSG/inc/: csg.hpp  csgobject.hpp  csgtypes.hpp  octree.hpp  octree_node.hpp  octreeutils.hpp
CSG/src/: box.cpp  csgobject.cpp  csgoperator.cpp  csgtypes.cpp  octree.cpp  octree_node.cpp  octree_vertexnode.cpp  octreeutils.cpp
CSG/test/: csg_testrunner.cpp  test_csgoperator.cpp  test_octree.cpp  test_octreeutils.cpp  test_vertexnode.cpp  test_volumenode.cpp
FEM/: CMakeLists.txt
applications/: CMakeLists.txt
applications/3DViewer/: CMakeLists.txt
applications/3DViewer/data/shaders/: fragmentShader.glsl  fragmentShader.xml  geometryShader.glsl  vertexShader.glsl  vertexShader.xml
applications/3DViewer/drivers/: 3dviewer.cpp  STLConverter.cpp  StructuredMarchingCubes.cpp  csg2stl.cpp
applications/3DViewer/inc/: BoxScene2D.hpp  ViewerScene.hpp
applications/3DViewer/src/: ViewerScene.cpp
applications/SpaceTreeGraphics/: CMakeLists.txt
applications/SpaceTreeGraphics/drivers/: dropmerge.cpp  mathieu_stability.cpp
applications/SpaceTreeGraphics/inc/: PointScene.hpp  complex.hpp  hilbert_determinant.hpp  mergefunction.hpp  mergefunction_impl.hpp  typedefs.hpp
applications/SpaceTreeGraphics/scripts/: dropmerge.py  dropmerge_csv.py  mathieu_csv.py
applications/SpaceTreeGraphics/src/: PointScene.cpp  complex.cpp  hilbert_determinant.cpp
applications/benchmarks/: CMakeLists.txt
applications/benchmarks/drivers/: space_tree_benchmark.cpp  thread_pool_benchmark.cpp
applications/dropmerge/: CMakeLists.txt
applications/dropmerge/bindings/: dropmerge_bindings.cpp
applications/dropmerge/inc/: SpaceTreeDrawManager.hpp  collectnodes.hpp  dynamictree.hpp  dynamictree_impl.hpp  mergefunction.hpp  mergefunction_impl.hpp  typedefs.hpp
applications/dropmerge/scripts/: dropmerge.py  dropmerge_csv.py
applications/dropmerge/src/: SpaceTreeDrawManager.cpp  collectnodes.cpp  dynamictree.cpp  main.cpp
applications/examples/: CMakeLists.txt
applications/examples/drivers/: bad_apple.cpp  fcm_ellipsoid.cpp  marching_squares.cpp  marching_squares_ellipsis.cpp
applications/mathieu_stability/: CMakeLists.txt
applications/mathieu_stability/inc/: complex.hpp  hilbert_determinant.hpp
applications/mathieu_stability/scripts/: mathieu_csv.py
applications/mathieu_stability/src/: hilbert_determinant.cpp  main.cpp
libraries/: CMakeLists.txt
libraries/CSG/: CMakeLists.txt
libraries/CSG/clustering/inc/: minimumdisc.hpp
libraries/CSG/clustering/src/: minimumdisc.cpp
libraries/CSG/clustering/test/: minimumdisc_test.cpp
libraries/CSG/grouping/inc/: minimumdisc.hpp
libraries/CSG/grouping/src/: minimumdisc.cpp
libraries/CSG/inc/: box.hpp  csg.hpp  csgtypes.hpp  octree_node.hpp  octree_vertexnode.hpp  octreeutils.hpp
libraries/CSG/inc/csg/: clustering.hpp  csg.hpp  operators.hpp  primitives.hpp  trees.hpp
libraries/CSG/primitives/inc/: box.hpp  csgfactory.hpp  csgfactory_impl.hpp  csgobject.hpp  csgobject_impl.hpp  csgoperator.hpp  csgoperators.hpp  csgoperators_impl.hpp  primitives.hpp  primitives_impl.hpp  rectangle.hpp  sphere.hpp
libraries/CSG/primitives/src/: box.cpp  csgobject.cpp  csgoperator.cpp  sphere.cpp  (+1 more)
libraries/CSG/python/: CMakeLists.txt
libraries/CSG/src/: csgtypes.cpp  octree_vertexnode.cpp  octree_volumenode.cpp  octreeutils.cpp  sphere.cpp
libraries/CSG/test/: csg_testrunner.cpp  test_csgtypes.cpp
libraries/FEM/: CMakeLists.txt
libraries/FEM/inc/: element.hpp
libraries/FEM/python/: CMakeLists.txt
libraries/FEM/test/: fem_testrunner.cpp
libraries/ciegl/: CMakeLists.txt
libraries/ciegl/python/: CMakeLists.txt
libraries/ciegl/test/: GLContext_test.cpp  glvisualization_testrunner.cpp
libraries/cieutils/: CMakeLists.txt
libraries/cieutils/inc/: observer.hpp
libraries/cieutils/test/: cieutils_testrunner.cpp
libraries/glvisualization/: CMakeLists.txt
libraries/glvisualization/inc/: csgvisualization.hpp  glvisualization.hpp
libraries/glvisualization/python/: CMakeLists.txt
libraries/glvisualization/test/: GLContext_test.cpp  glvisualization_testrunner.cpp
libraries/linalg/: CMakeLists.txt
libraries/linalg/inc/: gaussiansolver.hpp  linalg.hpp  linalgtypes.hpp  linalgutilities.hpp  linalgutilities_impl.hpp  matrix.hpp  matrix_impl.hpp
libraries/linalg/src/: gaussiansolver.cpp  linalgutilities.cpp  matrix.cpp
libraries/linalg/test/: linalg_test.cpp  main_test.cpp
libraries/machinelearning/: CMakeLists.txt
libraries/machinelearning/classification/: CMakeLists.txt
libraries/machinelearning/python/: CMakeLists.txt
libraries/meshkernel/: CMakeLists.txt
libraries/meshkernel/inc/: mesh.hpp  meshgenerator.hpp  meshgenerator_helper.hpp
libraries/meshkernel/python/: CMakeLists.txt
libraries/meshkernel/src/: meshgenerator.cpp  meshgenerator_helper.cpp
libraries/meshkernel/test/: main_test.cpp  meshgenerator_test.cpp
libraries/optimization/: CMakeLists.txt
libraries/optimization/python/: CMakeLists.txt
libraries/splinekernel/: CMakeLists.txt
libraries/splinekernel/inc/: basisfunctions.hpp  curve.hpp  finiteelements.hpp  interpolation.hpp  surface.hpp
libraries/splinekernel/python/: CMakeLists.txt
libraries/splinekernel/src/: basisfunctions.cpp  curve.cpp  finiteelements.cpp  interpolation.cpp  surface.cpp  utilities.cpp
libraries/splinekernel/test/: basisfunctions_test.cpp  curve_test.cpp  deboor_test.cpp  interpolation_test.cpp  main_test.cpp  sparse_test.cpp  surface_test.cpp
python/: CMakeLists.txt
python/bindings/: denseMatrixConversion.hpp  sparseMatrixConversion.hpp
python/data/: matrix.csv
python/modules/pysplinekernel/: __init__.py  app.py  appSpline2D.py  canvas.py  editlinevisual.py  editmarkervisual.py  light.py  meshvisual.py  splinekernel.py  splinesurfacevisual.py  splinevisual.py  surfacekernel.py
python/scripts/: 3DscatterPlot.py  laplaceProblem.py  main.py  meshCircle.py  meshSquare.py  plotBSplineSurface.py  splineBuilder_vispy.py  splineGL.py  surfTest.py  test.py
(+420 files in other folders)
